# ai-memory-infra

./: .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  scaffold.py
.cursor/: hooks.json
.cursor/hooks/: completion_gate.py
.cursor/rules/: 00-project.mdc  10-python-tdd.mdc  20-docs-dod.mdc
.github/: pull_request_template.md
.github/workflows/: backup-verify.yml  cd.yml  (+5 more)
contract/: dod.yaml  practices.yaml  tenets.yaml
data/: reconciled-facts.csv
docs/: BUILD-JOURNEY.md  agent-personas.md  architecture-evolution.md  architecture.md  decommission.md  interfaces.md  market-fit-validation.md  observability-deploy.md  runbook.md  setup.md  tenets.md
extension/: README.md
infra/: .env.example  Caddyfile  Makefile  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  mcp-proxy.Dockerfile  mem0-server.Dockerfile
scripts/: acceptance_probe.py  backup.sh  bootstrap.sh  bulk_seed_importer.py  check-repo-health.ps1  check_memory_contract.py  check_pointer_purity.py  check_secrets_catalog.py  check_status_snapshot.py  completion_gate.py  csv_to_bulk_seed.py  cursor_user_rules.py  deploy_probe_roundtrip.sh  handoff_verify.py  install-hooks.ps1  install_ide_hooks.py  memory.py  memory_compaction.py  operator_action.py  plant-drill-canary.sh  register-repo-health-task.ps1  render_contract.py  restore-drill.sh  restore.sh  run_eval_gate.py  session_bootstrap.py  session_checkpoint.py  setup_accounts.py  ssh_unlock.py  teardown.py  verify_source_propagation.py
tests/: conftest.py
(+174 files in other folders)
