[project]
name = "ai-memory-infra"
version = "0.0.1"
description = "Self-hosted cross-platform AI memory infrastructure with a knowledge graph"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "mem0ai>=0.1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "neo4j>=5.20",
    "psycopg[binary]>=3.2",
    "click>=8.1",
    "httpx>=0.27",
    "mcp>=1.0",
    "prometheus-client>=0.20",
    "python-jose[cryptography]>=3.3",
    "pydantic>=2.7",
]

[project.scripts]
ai-memory-mcp = "mcp_proxy.server:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[tool.ruff]
line-length = 100
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --cov=src --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/cli.py", "*/__init__.py"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
